--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,6 +92,7 @@ footer .container a:hover {
     border-radius: 10px;
     transition: all 0.3s ease-in-out;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    min-height: 228px; 
 }
 
 .service-card i {
