--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -7,7 +7,12 @@ h1,
 h2 {
   font-family: "Playfair Display", serif;
 }
-
+.username-placeholder{
+  padding-bottom: 5px;
+}
+.dropdown-menu{
+  margin-top: 3px !important;
+}
 .sidebar {
   background-color: #002147;
   min-height: 100vh;
